# Zero-Lag-PolymarketBot

./: .env.example  .gitignore  Cargo.toml  README.md  README_CN.md  py_signer.py  readme.md  readmeCN.md
dashboard/: app.py
dashboard/templates/: index.html
data/: .gitkeep
src/: config.rs  main.rs  models.rs
src/analyzer/: mod.rs
src/api/: clob.rs  gamma.rs  mod.rs  websocket.rs
src/db/: mod.rs
src/executor/: mod.rs
src/signer/: mod.rs
