[package]
name = "polymarket-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.35", features = ["serde"] }
rust_decimal_macros = "1.35"
chrono = { version = "0.4.38", features = ["serde"] }
hex = "0.4.3"
secp256k1 = { version = "0.29", features = ["recovery", "global-context", "rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
dashmap = "5.5"
alloy-primitives = "=0.7.7"
alloy-dyn-abi = "=0.7.7"
alloy-sol-types = "=0.7.7"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
bytemuck = { version = "1.15", features = ["derive"] }
